2018-12-10  Charlie Zender  <zender@uci.edu>

	* Merge GOB90 and HTR16 data processing for O2X

	* Eliminate use of k_O2_O2 equilibrium coefficient to scale cross-sections

2018-12-02  Charlie Zender  <zender@uci.edu>

	* Updating O2X.F90 to read CIA files

2018-11-30  Charlie Zender  <zender@uci.edu>

	* Initialize srt_one(1)=1 in abs_xsx_get() and mlk_prm_get()

2018-10-28  Charlie Zender  <zender@uci.edu>

	* Change swnb2, O3.F90, and O2.F90 to use abs_xsx_get() access mechanism for O3 and O2

2018-10-23  Charlie Zender  <zender@uci.edu>

	* ACA 2.4.0 release procedure:
	cd ~/sw;git commit -a -m 'Version 2.4.0: Portland';git push
	git tag -a 2.4.0 -m 'Extend grid to LW; HITRAN2016; CO N2O CFC11 CFC12 JPL O3';git push --tags

	* Current snapshot works fine on firn with gcc7 on MacOS 10.13

	* Zero qnt_yld_NO2 and abs_xsx_NO2_dadT when not present in input file

	* Turn-on CO by default since IEEE issues have disappeared

	* Settle-on new default 10 cm-1/1 cm-1 SW/LW resolution

2018-10-18  Charlie Zender  <zender@uci.edu>

	* Implement split resolution LW/SW grid capability in htrn2nb.F90

	* Fix kink in aerosol scattering caused by neglecting PMOM(1) by HG scattering fraction

2018-10-17  Charlie Zender  <zender@uci.edu>

	* Re-process NO2.F90

	* Protect ss_alb_fct from underflow

2018-10-16  Charlie Zender  <zender@uci.edu>

	* Default NO2 to use NCAR data (which has no quantuum yields)

	* Subroutinize absorption cross-section retrieval in abs_xsx_get()

	* Full support for CFC12

2018-10-15  Charlie Zender  <zender@uci.edu>

	* Subroutinize band parameter retrieval in mlk_bnd_prm_get()

	* Use wvl_bnd_lw_sw to set LW/SW boundary for diffusivity approximation and transmission diagnostics

2018-10-13  Charlie Zender  <zender@uci.edu>

	* swnb2 now works in LW! Underpredicts surface LW by ~35 W/m2

	* Implement diffusivity_factor=1.66 for LW angular integration

	* Expanding range of Malkmus files from 2000 to 0 cm-1, i.e., including entire LW
